--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -31,6 +31,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/profesor/dashboard-profesor.css"/>
+        <h:outputStylesheet library="css" name="/profesor/grafica.css"/>
         <div class="uk-margin-large-top"><h1 class="uk-margin-top uk-text-uppercase lescuadron ">Welcome!</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
@@ -81,6 +82,10 @@
                                 <f:ajax event="change"
                                         execute="@form"
                                         listener="#{dashboardProfesorControlador.seleccion()}"
+                                        onevent="function grafica(data) {
+                                            if (data.status === 'success')
+                                               {datosGrupo();}
+                                        }"
                                         render="formulario-grupo:fecha-fin formulario-grupo:fecha-inicio formulario-grupo:descripcion formulario-tabla:tabla-grupo graficas"/>
                             </h:selectOneMenu>
                         </div>
@@ -108,7 +113,7 @@
                 </h:form>
             </h:panelGroup>
         </div>
-        <h:panelGroup layout="block" id="graficas">
+        <h:panelGroup layout="block" id="graficas" >
             <ui:remove>
                 <ui:repeat value="#{alumnoTareaNivelControlador.transforma()}" var="alumnoNivel">
                     #{alumnoNivel}
@@ -122,6 +127,9 @@
                     </div>
                 </ui:repeat>
             </ui:repeat>
+        </h:panelGroup>
+        <h:panelGroup layout="block" styleClass="uk-container uk-child-width-1-2@m graficas" pt:uk-grid="" id="canvas">
+
         </h:panelGroup>
         <div class="uk-container uk-container-small uk-margin-medium-top uk-margin-large-bottom">
             <h:outputText styleClass="uk-text-bold uk-margin-remove-bottom titulo-section"
@@ -182,6 +190,8 @@
                 </div>
             </h:form>
         </div>
+        <h:outputScript library="js" name="/profesor/grafica.js"/>
     </ui:define>
+
 </ui:composition>
 </html>
