--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -125,7 +125,7 @@
                                             </h:outputText>
                                         </h:column>
                                         <h:column>
-                                            <f:facet name="header"><span>tarea gramática</span></f:facet>
+                                            <f:facet name="header"><span class="letra-tabla uk-text-bold">tarea gramática</span></f:facet>
                                             <h:outputText pt:uk-icon="ban" rendered="#{tareaAlumno.calificacionGramatica eq null}" />
                                             <h:link outcome="gramatica" rendered="#{tareaAlumno.calificacionGramatica ne null and tareaAlumno.calificacionGramatica eq 0}">
                                                 <h:graphicImage library="img" name="icono/evaluar.svg"/>
